<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="top"
              android:layout_margin="16dp">

    <TextView
            android:id="@+id/fileSizeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_size"/>

    <EditText
            android:id="@+id/fileValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/size_hint"
            android:inputType="number"/>
    <TextView
            android:id="@+id/transferSpeedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_speed"
            android:textSize="14sp"/>

    <EditText
            android:id="@+id/speedValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/speed_hint"
            android:inputType="number"/>

    <TextView
            android:id="@+id/speedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed_label"
            android:textSize="18sp"/>

    <TextView
            android:id="@+id/transferSpeedValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed_value"
            android:textSize="24sp"/>

</LinearLayout>